# rag-app

./: README.md
ai/: .gitignore  pyproject.toml  requirements.txt
ai/app/: main.py
ai/app/api/routes/: chat.py  document.py  session.py
ai/app/config/: config.py
ai/app/core/: memory.py  prompt.py  rag_chain.py  verify_chain.py
ai/app/ingestion/: embedder.py  loader.py  splitter.py
ai/app/memory/: mongo_memory.py
ai/app/models/: chat.py
ai/app/utils/: logger.py
ai/app/vector_store/: faiss_store.py
frontend/rag-app/: package-lock.json  package.json
frontend/rag-app/app/: layout.tsx  page.tsx
frontend/rag-app/app/api/chat/: route.ts
frontend/rag-app/app/api/sessions/: route.ts
frontend/rag-app/app/api/sessions/[sessionId]/: route.ts
frontend/rag-app/app/api/upload/: route.ts
frontend/rag-app/app/chat/[sessionId]/: page.tsx
frontend/rag-app/components/: ErrorBoundary.tsx
frontend/rag-app/components/features/: Chat.tsx  ChatHistory.tsx  PdfPreview.tsx
frontend/rag-app/components/layout/: LayoutWrapper.tsx  Sidebar.tsx
frontend/rag-app/components/section/: Chat.tsx  ChatHistory.tsx  PdfPreview.tsx
frontend/rag-app/hooks/: useFileUpload.ts
frontend/rag-app/lib/: api.ts
frontend/rag-app/providers/: DocumentContext.tsx  MuiThemeProvider.tsx
frontend/rag-app/styles/: globals.css  theme.ts
frontend/rag-app/types/: index.ts
