[project]
name = "ai"
version = "0.1.0"
description = "RAG Chat Application with Gemini and MongoDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain-community",
    "langchain-google-genai",
    "langchain-huggingface",
    "sentence-transformers",
    "faiss-cpu",
    "pymongo",
    "pypdf",
    "python-dotenv",
    "fpdf",
    "python-multipart>=0.0.22",
    "langchain>=1.2.10",
    "langchain-mongodb>=0.11.0",
    "langchain-classic>=1.0.1",
]
